docs/api/qiskit/0.25/qiskit.opflow.evolutions.Suzuki.mdx
---
title: Suzuki (v0.25)
description: API reference for qiskit.opflow.evolutions.Suzuki in qiskit v0.25
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.opflow.evolutions.Suzuki
---

<span id="qiskit-opflow-evolutions-suzuki" />

# qiskit.opflow\.evolutions.Suzuki

<Class id="qiskit.opflow.evolutions.Suzuki" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.17/qiskit/opflow/evolutions/trotterizations/suzuki.py" signature="Suzuki(reps=1, order=2)" modifiers="class">
  Suzuki Trotter expansion, composing the evolution circuits of each Operator in the sum together by a recursive “bookends” strategy, repeating the whole composed circuit `reps` times.

  Detailed in [https://arxiv.org/pdf/quant-ph/0508139.pdf](https://arxiv.org/pdf/quant-ph/0508139.pdf).

  **Parameters**

  *   **reps** (`int`) – The number of times to repeat the expansion circuit.
  *   **order** (`int`) – The order of the expansion to perform.

  ### \_\_init\_\_

  <Function id="qiskit.opflow.evolutions.Suzuki.__init__" signature="__init__(reps=1, order=2)">
    **Parameters**

    *   **reps** (`int`) – The number of times to repeat the expansion circuit.
    *   **order** (`int`) – The order of the expansion to perform.
  </Function>

  ## Methods

  |                                                                                                                    |                                                                                                                 |
  | ------------------------------------------------------------------------------------------------------------------ | --------------------------------------------------------------------------------------------------------------- |
  | [`__init__`](#qiskit.opflow.evolutions.Suzuki.__init__ "qiskit.opflow.evolutions.Suzuki.__init__")(\[reps, order]) | **type reps**`int`                                                                                              |
  | [`convert`](#qiskit.opflow.evolutions.Suzuki.convert "qiskit.opflow.evolutions.Suzuki.convert")(operator)          | Convert a `SummedOp` into a `ComposedOp` or `CircuitOp` representing an approximation of e^-i\*\`\`op\_sum\`\`. |

  ## Attributes

  |                                                                                           |                                                                                               |
  | ----------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------- |
  | [`order`](#qiskit.opflow.evolutions.Suzuki.order "qiskit.opflow.evolutions.Suzuki.order") | returns order                                                                                 |
  | [`reps`](#qiskit.opflow.evolutions.Suzuki.reps "qiskit.opflow.evolutions.Suzuki.reps")    | The number of repetitions to use in the Trotterization, improving the approximation accuracy. |

  ### convert

  <Function id="qiskit.opflow.evolutions.Suzuki.convert" signature="convert(operator)">
    Convert a `SummedOp` into a `ComposedOp` or `CircuitOp` representing an approximation of e^-i\*\`\`op\_sum\`\`.

    **Parameters**

    **operator** (`OperatorBase`) – The `SummedOp` to evolve.

    **Return type**

    `OperatorBase`

    **Returns**

    The Operator approximating op\_sum’s evolution.

    **Raises**

    **TypeError** – A non-SummedOps Operator is passed into `convert`.
  </Function>

  ### order

  <Attribute id="qiskit.opflow.evolutions.Suzuki.order">
    returns order

    **Return type**

    `int`
  </Attribute>

  ### reps

  <Attribute id="qiskit.opflow.evolutions.Suzuki.reps">
    The number of repetitions to use in the Trotterization, improving the approximation accuracy.

    **Return type**

    `int`
  </Attribute>
</Class>

